# osd_rust

./: Cargo.toml  Makefile  main.rs
assets/: road_network.json
assets/car_0001/: car_0001.blend  model.glb
assets/road_trailer_0001/: model.glb  road_trailer_0001.blend
src/: game.rs  lib.rs  main.rs  road_network_builder.rs  road_systems.rs  windowmailer.rs
