[package]
name    = "osd"
version = "0.0.0"
edition = "2021"

[dependencies]
rapier3d = "0.15.0"
bevy = "0.8.1"
bevy_rapier3d = "0.18.0"
serde = "1.0.*"
serde_json = "1.0.*"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
futures = "0.3"
js-sys = "0.3.60"

[dependencies.web-sys]
version = "0.3.60"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'ReadableStream',
  'ReadableStreamDefaultReader',
  'Window',
]

[[bin]]
name = "main"
path = "./src/main.rs"

[profile.dev]
opt-level = 3
